[package]
name = "meshpit"
version = "0.1.0"
edition = "2024"

[dependencies]
ctor = "0.6.3"
env_logger = "0.11.8"
futures = "0.3.31"
futures-util = "0.3.31"
log = "0.4.29"
ntest = "0.9.5"
once_cell = "1.21.3"
rcon = "0.6.0"
reqwest = { version = "0.13.1", features = ["blocking"]}
tokio = { version = "1.49.0", features = ["full"]}
tokio-tungstenite = "0.28.0"
toml_edit = "0.24.0"
